<resources>
    <string name="app_label">Messaging</string>
    <string name="new_message">Messaging</string>
    <string name="create_new_message">Compose new message</string>
    <string name="menu_call_back">Call %s</string>
    <string name="menu_send_email">Send email to %s</string>
    <string name="menu_compose_new">Compose</string>
    <string name="menu_preferences">Settings</string>
    <string name="menu_cp_messages">Configuration messages</string>
    <string name="menu_add_address_to_contacts">Add %s to Contacts</string>
    <string name="menu_call">Call</string>
    <string name="menu_delete_all">Delete threads</string>
    <string name="menu_delete">Delete thread</string>
    <string name="menu_view">View thread</string>
    <string name="refreshing">Refreshing...</string>
    <string name="has_draft">Draft</string>
    <string name="anonymous_recipient">Anonymous</string>
    <string name="no_subject_view">(No subject)</string>
    <string name="messagelist_sender_self">Me</string>
    <string name="message_viewer_sent_to">Sent to %s</string>
    <string name="message_viewer_received_from">Received from %s</string>
    <string name="view_message_details">View message details</string>
    <string name="sent_on">%s</string>
    <string name="expire_on">Expires: %s</string>
    <string name="kilobyte">KB</string>
    <string name="undelivered_msg_dialog_title">Undelivered message</string>
    <string name="undelivered_msg_dialog_body">Unable to send this message. Sending last attempted: %s</string>
    <string name="undelivered_sms_dialog_body">Unable to send this message</string>
    <string name="delete_thread">Delete thread</string>
    <string name="menu_forward">Forward</string>
    <string name="download">Download</string>
    <string name="downloading">Downloading</string>
    <string name="inline_subject">Subject: %s</string>
    <string name="drm_protected_text">* DRM protected text *</string>
    <string name="insufficient_drm_rights">Invalid DRM rights</string>
    <string name="copy_message_text">Copy message text</string>
    <string name="copy_message_to_sim">Copy to SIM</string>
    <string name="copy_to_sim_not_available">Unable to save as single message to SIM card. Message too large</string>
    <string name="copy_to_sim_number_format_err">Unable to save to SIM card. Invalid address</string>
    <string name="copy_to_sim_not_available_sim_full">Unable to save to SIM card. Not enough SIM card memory</string>
    <string name="copy_success">Copied to phone</string>
    <string name="message_options">Message options</string>
    <string name="done">Done</string>
    <string name="move_up">Move up</string>
    <string name="move_down">Move down</string>
    <string name="remove_slide">Remove slide</string>
    <string name="add_slide">Add slide</string>
    <string name="add_slide_hint">Select to create slide</string>
    <string name="discard_slideshow">Discard slideshow</string>
    <string name="remove_text">Remove text</string>
    <string name="add_picture">Add picture</string>
    <string name="remove_picture">Remove picture</string>
    <string name="add_music">Add music</string>
    <string name="remove_music">Remove music</string>
    <string name="add_video">Add video</string>
    <string name="remove_video">Remove video</string>
    <string name="to_hint">To</string>
    <string name="subject_hint">Enter subject</string>
    <string name="add_attachment">Attach</string>
    <string name="add_subject">Add subject</string>
    <string name="discard">Discard</string>
    <string name="view">View</string>
    <string name="replace">Replace</string>
    <string name="remove">Remove</string>
    <string name="send">Send</string>
    <string name="mms">MMS</string>
    <string name="type_to_compose_text_enter_to_send">Tap to enter message</string>
    <string name="open_keyboard_to_compose_message">Open keyboard to compose message</string>
    <string name="image_too_large">Picture too large</string>
    <string name="compressing">Picture too large. Compressing...</string>
    <string name="exceed_message_size_limitation">Message size limit reached</string>
    <string name="message_too_big_for_video">Unable to attach video. Message too large</string>
    <string name="failed_to_resize_image">Picture not resized</string>
    <string name="resize_image_error_information">Unable to send. Image still too large</string>
    <string name="forward_prefix">Fwd:</string>
    <string name="forward_prefix_att">FW:</string>
    <string name="discard_message">Discard</string>
    <string name="discard_message_reason">Your message will be discarded because it has no valid recipients</string>
    <string name="invalid_destination">Invalid address entered</string>
    <string name="invalid_recipient_message">Enter valid recipient to send message</string>
    <string name="cannot_send_message">Cannot send this message</string>
    <string name="cannot_send_message_reason">Invalid recipients entered</string>
    <string name="cannot_forward_drm_obj">Unable to forward DRM object included in message</string>
    <string name="converting_to_picture_message">Converting to multimedia message...</string>
    <string name="converting_to_text_message">Converting to text message...</string>
    <string name="cannot_add_slide_anymore">Unable to add more slides</string>
    <string name="cannot_save_message">Unable to save message</string>
    <string name="message_saved_as_draft">Message saved as draft</string>
    <string name="recipient_max_limit">Maximum number of recipients is %d</string>
    <string name="too_many_attachments">Maximum number of attachments (%1$s) exceeded. Only first %2$s will be added</string>
    <string name="pref_notification_settings_title">Notification settings</string>
    <string name="pref_mms_settings_title">Multimedia message (MMS) settings</string>
    <string name="pref_sms_settings_title">Text message (SMS) settings</string>
    <string name="pref_sms_storage_title">Storage settings</string>
    <string name="pref_summary_manage_sim_messages">Manage messages stored on your SIM card</string>
    <string name="pref_summary_mms_delivery_reports">Request a delivery report for each message you send</string>
    <string name="pref_summary_mms_read_reports">Request a read report for each message you send</string>
    <string name="pref_summary_sms_delivery_reports">Request a delivery report for each message you send</string>
    <string name="pref_summary_auto_delete">Delete old messages when maximum number of messages reached</string>
    <string name="pref_summary_delete_limit">%d messages per conversation</string>
    <string name="pref_title_manage_sim_messages">Manage SIM card messages</string>
    <string name="pref_title_mms_delivery_reports">Delivery reports</string>
    <string name="pref_title_mms_read_reports">Read reports</string>
    <string name="pref_title_sms_delivery_reports">Delivery reports</string>
    <string name="pref_title_auto_delete">Delete old messages</string>
    <string name="pref_title_sms_delete">Text message limit</string>
    <string name="pref_title_mms_delete">Multimedia message limit</string>
    <string name="pref_title_notification_enabled">Notifications</string>
    <string name="pref_summary_notification_enabled">Display message notifications in status bar</string>
    <string name="pref_title_notification_ringtone">Select ringtone</string>
    <string name="pref_title_mms_auto_retrieval">Auto-retrieve</string>
    <string name="pref_summary_mms_auto_retrieval">Automatically retrieve messages</string>
    <string name="pref_title_mms_retrieval_during_roaming">Roaming auto-retrieve</string>
    <string name="pref_summary_mms_retrieval_during_roaming">Automatically retrieve messages while roaming</string>
    <string name="select_all">Select all</string>
    <string name="pref_summary_manage_smsc_messages">Message Centre</string>
    <string name="pref_title_manage_smsc_messages">Not set</string>
    <string name="set_message_centre">Set message centre</string>
    <string name="pref_title_cb_activation">CB activation</string>
    <string name="pref_summary_cb_activation">Allows you to receive CB messages</string>
    <string name="pref_title_channel_configuration">Channel configuration</string>
    <string name="language">Language</string>
    <string name="channel_id">Channel number</string>
    <string name="channel_name">Channel name</string>
    <string name="enable_channel">Enable channel</string>
    <string name="pref_title_mms_creation_mode">Creation mode</string>
    <string name="pref_summary_mms_creation_mode">MMS creation mode for compose message</string>
    <string name="pref_dialog_title_mms_creation_mode">Select creation mode</string>
    <string name="pref_title_font_size">Message font size</string>
    <string name="pref_title_split_view">Split view</string>
    <string name="pref_summary_split_view">Enable split view on landscape screen</string>
    <string name="pref_german_language_title">Deutsch</string>
    <string name="pref_english_language_title">English</string>
    <string name="pref_italian_language_title">Italiano</string>
    <string name="pref_french_language_title">Français</string>
    <string name="pref_spanish_language_title">Español</string>
    <string name="pref_dutch_language_title">Nederlands</string>
    <string name="pref_swedish_language_title">Svenska</string>
    <string name="pref_danish_language_title">Dansk</string>
    <string name="pref_portuguese_language_title">Português</string>
    <string name="pref_cb_settings_title">Cell broadcast (CB) settings</string>
    <string name="pref_title_sms_input_mode">Input mode</string>
    <string name="pref_summary_sms_input_mode">SMS input mode to compose message</string>
    <string name="pref_dialog_title_sms_input_mode">Select input mode</string>
    <string name="pref_title_sms_expiry_date">Expiry date</string>
    <string name="pref_summary_sms_expiry_date">Expiry date for SMS</string>
    <string name="pref_dialog_title_sms_expiry_date">Select expiry date</string>
    <string name="pref_push_message_settings_title">Push message settings</string>
    <string name="pref_title_push_message_enabled">Push messages</string>
    <string name="pref_summary_push_message_enabled">Receive push messages from network</string>
    <string name="pref_title_service_loading_action">Service loading</string>
    <string name="pref_dialog_title_service_loading_action">Service loading</string>
    <string name="menu_translate">Translate</string>
    <string name="paste">Paste</string>
    <string name="cancel">Cancel</string>
    <string name="select_Language">Select</string>
    <string name="powered_by_google">Powered by Google</string>
    <string name="pref_title_text_field_color">Background color</string>
    <string name="pause">pause</string>
    <string name="previous">previous</string>
    <string name="next">next</string>
    <string name="pref_title_notification_vibrateWhen">Vibrate</string>
    <string name="pref_summary_notification_vibrateWhen">Also vibrate when notified</string>
    <string name="prefDialogTitle_vibrateWhen">Vibrate</string>
    <string name="pref_title_notification_backlight">Screen On</string>
    <string name="pref_summary_notification_backlight">Screen on for notification alerts</string>
    <string name="pref_signature_title">Signature</string>
    <string name="pref_title_signature_enabled">Enable Signature</string>
    <string name="pref_title_signature_text">Signature Text</string>
    <string name="prefDefault_vibrateWhen">never</string>
    <string name="pref_callback_title">Callback number</string>
    <string name="pref_title_callback_enabled">Enable callback number</string>
    <string name="pref_title_callback_summary">Enter a default callback number</string>
    <string name="pref_title_callback_text">Callback number</string>
</resources>