<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:layout_width="fill_parent" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:orientation="vertical" android:paddingLeft="8.0dip" android:paddingTop="2.0dip" android:paddingRight="8.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <TextView android:id="@id/channel_name_text" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/channel_name" style="?android:attr/textAppearanceSmall" />
        <EditText android:textSize="16.0sp" android:id="@id/channel_name_edit" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="2.0dip" android:hint="@string/channel_name" android:singleLine="true" android:maxLength="20" android:inputType="textCapSentences" />
        <TextView android:id="@id/channel_id_text" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="2.0dip" android:text="@string/channel_id" style="?android:attr/textAppearanceSmall" />
        <EditText android:textSize="16.0sp" android:id="@id/channel_id_edit" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="2.0dip" android:hint="@string/channel_id" android:singleLine="true" android:maxLength="3" android:numeric="integer" />
        <CheckBox android:textColor="#ffbebebe" android:id="@id/enable_checkbox" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="-6.0dip" android:layout_marginBottom="-6.0dip" android:text="@string/enable_channel" style="?android:attr/textAppearanceSmall" />
    </LinearLayout>
</ScrollView>
