<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <RelativeLayout android:gravity="center_vertical" android:id="@id/title_bar" android:layout_width="fill_parent" android:layout_height="25.0dip" style="?android:attr/windowTitleBackgroundStyle">
        <TextView android:gravity="center_vertical" android:id="@id/title_string" android:paddingLeft="3.0dip" android:paddingRight="16.0dip" android:layout_width="fill_parent" android:layout_height="fill_parent" android:text="@string/menu_translate" style="?android:attr/windowTitleStyle" />
        <TextView android:textSize="8.599976sp" android:textColor="@color/text_color_disabled" android:gravity="right" android:id="@id/google_string" android:paddingRight="6.0dip" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_marginTop="6.0dip" android:text="@string/powered_by_google" />
    </RelativeLayout>
    <LinearLayout android:gravity="bottom" android:orientation="horizontal" android:id="@id/language_buttons" android:background="@drawable/translate_bg" android:layout_width="fill_parent" android:layout_height="53.0dip">
        <Button android:textSize="16.0sp" android:ellipsize="none" android:gravity="center_vertical" android:id="@id/from_button" android:background="@drawable/translate_drop_selector" android:paddingRight="30.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="3.0dip" android:text="@string/select_Language" android:singleLine="true" android:layout_weight="1.0" />
        <ImageButton android:layout_gravity="center_vertical" android:id="@id/to_image_button" android:background="@drawable/translate_switch_selector" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="2.5999756dip" android:layout_marginRight="2.5999756dip" android:src="@drawable/translate_arrow_right" />
        <Button android:textSize="16.0sp" android:ellipsize="none" android:gravity="center_vertical" android:id="@id/to_button" android:background="@drawable/translate_drop_selector" android:paddingRight="30.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/select_Language" android:singleLine="true" android:layout_weight="1.0" />
        <ImageButton android:id="@id/trans_search_button" android:layout_width="46.5dip" android:layout_height="46.5dip" android:layout_marginRight="3.0dip" android:layout_marginBottom="0.5dip" android:src="@drawable/translate_search_n" />
    </LinearLayout>
    <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent">
        <LinearLayout android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_weight="1.0">
            <RelativeLayout android:layout_width="fill_parent" android:layout_height="wrap_content">
                <LinearLayout android:layout_width="fill_parent" android:layout_height="fill_parent">
                    <ScrollView android:scrollbarStyle="outsideOverlay" android:id="@id/editors_scroll" android:focusable="false" android:scrollbars="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent">
                        <LinearLayout android:orientation="vertical" android:id="@id/editors" android:layout_width="fill_parent" android:layout_height="wrap_content">
                            <EditText android:textAppearance="?android:textAppearanceSmall" android:textSize="16.0sp" android:textColor="@touchwiz:color/tw_color002" android:id="@id/input_text" android:paddingLeft="10.599976dip" android:paddingTop="10.599976dip" android:paddingRight="10.599976dip" android:paddingBottom="10.599976dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="4.799988dip" android:layout_marginTop="6.0dip" android:layout_marginRight="4.799988dip" android:imeOptions="actionDone" />
                            <EditText android:textAppearance="?android:textAppearanceSmall" android:textSize="16.0sp" android:textColor="@touchwiz:color/tw_color002" android:id="@id/output_text" android:paddingLeft="10.599976dip" android:paddingTop="10.599976dip" android:paddingRight="10.599976dip" android:paddingBottom="10.599976dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="4.799988dip" android:layout_marginRight="4.799988dip" android:imeOptions="actionDone" />
                        </LinearLayout>
                    </ScrollView>
                </LinearLayout>
            </RelativeLayout>
        </LinearLayout>
        <LinearLayout android:gravity="center_vertical" android:orientation="horizontal" android:id="@id/buttons" android:background="@touchwiz:drawable/tw_softkeyview_bg" android:paddingLeft="5.0dip" android:paddingTop="5.0dip" android:paddingRight="5.0dip" android:paddingBottom="1.0dip" android:layout_width="fill_parent" android:layout_height="54.599976dip" style="@android:style/ButtonBar">
            <Button android:id="@id/send_button" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/send" android:layout_weight="1.0" />
            <Button android:id="@id/paste_button" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/paste" android:layout_weight="1.0" />
            <Button android:id="@id/cancel_button" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/cancel" android:layout_weight="1.0" />
        </LinearLayout>
        <LinearLayout android:gravity="center_vertical" android:orientation="horizontal" android:id="@id/sub_buttons" android:background="@touchwiz:drawable/tw_softkeyview_bg" android:paddingLeft="40.0dip" android:paddingTop="5.0dip" android:paddingRight="40.0dip" android:paddingBottom="1.0dip" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="54.599976dip" style="@android:style/ButtonBar">
            <Button android:id="@id/done_button" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/done" android:layout_weight="1.0" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
